--- a/index.html
+++ b/index.html
@@ -6,114 +6,73 @@
   <title>YAADLIFE • One Love Forever</title>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-  <script src="https://unpkg.com/@web3auth/modal"></script>
-  <script src="https://unpkg.com/@web3auth/base"></script>
   <style>
     :root{--black:#000;--green:#009B48;--gold:#FFD700;--darkgreen:#006633}
     *{margin:0;padding:0;box-sizing:border-box}
-    html,body{height:100%;margin:0;background:#000;font-family:'Inter',sans-serif;color:#fff;overflow-x:hidden}
-    .bg-slideshow{position:fixed;top:0;left:0;width:100%;height:100%;z-index:1}
-    .bg-slide{position:absolute;top:0;left:0;width:100%;height:100%;background-size:cover;background-position:center;opacity:0;transition:opacity 4s ease}
-    .bg-slide.active{opacity:1}
-    .container{max-width:960px;margin:0 auto;padding:20px;position:relative;z-index:10}
-    h1{font-size:5.8rem;color:var(--gold);text-align:center;font-weight:900;text-shadow:0 0 60px var(--green),0 15px 40px #000;letter-spacing:6px;margin:40px 0}
-    h2{font-size:2.4rem;text-align:center;color:var(--gold);margin:40px 0 25px}
-    .step{display:none;padding:40px;background:rgba(0,0,0,0.88);backdrop-filter:blur(22px);border-radius:44px;border:6px solid var(--green);margin:35px 0;box-shadow:0 35px 90px rgba(0,0,0,.98)}
-    .step.active{display:block;animation:fadeIn 1s}
-    @keyframes fadeIn{from{opacity:0;transform:translateY(30px)}to{opacity:1;transform:none}}
-    button{background:var(--green);color:#fff;border:none;padding:26px 50px;margin:35px auto;display:block;width:100%;max-width:520px;border-radius:90px;font-size:1.8rem;font-weight:900;cursor:pointer;transition:.5s;box-shadow:0 20px 70px rgba(0,155,72,1)}
-    button:hover{background:var(--darkgreen);transform:scale(1.08)}
-    button.wallet{background:#6B4EFF;border:8px solid var(--gold);font-size:2rem;padding:36px;animation:pulse 2s infinite}
-    @keyframes pulse{0%,100%{box-shadow:0 0 0 0 rgba(255,215,0,0.8)}70%{box-shadow:0 0 0 20px rgba(255,215,0,0)}}
-    button.small{background:var(--gold);color:#000;padding:14px 28px;font-size:1.2rem;border-radius:40px;margin-top:10px}
-    .option-card{background:rgba(255,255,255,0.16);border:5px solid transparent;border-radius:36px;overflow:hidden;cursor:pointer;transition:.5s;margin:22px 0;box-shadow:0 18px 50px rgba(0,0,0,.7)}
-    .option-card:hover{transform:scale(1.06)}
-    .option-card.selected{border-color:var(--gold)}
-    .option-img{height:200px;background-size:cover;background-position:center}
-    .option-text{padding:24px;text-align:center;font-size:1.5rem;font-weight:700}
-    .calendar-input{width:100%;padding:32px;border-radius:32px;background:rgba(255,255,255,.14);border:6px solid var(--green);color:#fff;font-size:1.8rem;text-align:center;margin:35px 0}
-    #start-button{font-size:3.2rem;padding:60px;background:linear-gradient(135deg,var(--green),var(--darkgreen));border:14px solid var(--gold)}
-    .total{font-size:5.5rem;font-weight:900;text-align:center;margin:80px 0;color:var(--gold);text-shadow:0 0 80px #000}
-    .breakdown{background:rgba(255,255,255,0.1);padding:22px;border-radius:20px;margin:20px 0;border-left:6px solid var(--gold);font-size:1.5rem}
-    .stay-block{margin:25px 0;padding:25px;background:rgba(255,255,255,0.08);border-radius:25px;border-left:6px solid var(--gold)}
+    html,body{height:100%;margin:0;background:#000;font-family:-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;color:#fff;overflow-x:hidden}
+    body{display:flex;flex-direction:column;min-height:100vh}
+    .container{max-width:420px;margin:0 auto;padding:20px;flex:1;display:flex;flex-direction:column;justify-content:flex-start}
+    h1{font-size:4.8rem;color:var(--gold);text-align:center;font-weight:900;text-shadow:0 0 40px var(--green);letter-spacing:4px;margin:30px 0 10px;line-height:1}
+    .tagline{text-align:center;font-size:1.8rem;margin:20px 0 40px;opacity:0.9;line-height:1.4}
+    .step{display:none;flex-direction:column;align-items:center;padding:30px;background:rgba(0,0,0,0.9);backdrop-filter:blur(20px);border-radius:32px;border:4px solid var(--green);margin:20px 0;box-shadow:0 20px 60px rgba(0,0,0,0.8)}
+    .step.active{display:flex;animation:fadeIn 0.8s}
+    @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:none}}
+    button{background:var(--green);color:#fff;border:none;padding:20px 40px;margin:20px auto;display:block;width:100%;border-radius:60px;font-size:1.6rem;font-weight:800;cursor:pointer;transition:0.4s;box-shadow:0 15px 40px rgba(0,155,72,0.8)}
+    button:hover{background:var(--darkgreen);transform:scale(1.05)}
+    button.wallet{background:#6B4EFF;border:6px solid var(--gold);font-size:1.8rem;padding:24px;animation:pulse 2s infinite}
+    @keyframes pulse{0%,100%{box-shadow:0 0 0 0 rgba(255,215,0,0.7)}70%{box-shadow:0 0 0 16px rgba(255,215,0,0)}}
+    button.small{background:var(--gold);color:#000;padding:12px 24px;font-size:1.1rem;border-radius:30px;margin-top:8px}
+    #start-button{font-size:2.4rem;padding:50px;background:linear-gradient(135deg,var(--green),var(--darkgreen));border:10px solid var(--gold)}
+    .total{font-size:4.5rem;font-weight:900;text-align:center;margin:40px 0;color:var(--gold);text-shadow:0 0 60px #000}
+    .breakdown{background:rgba(255,255,255,0.1);padding:18px;border-radius:16px;margin:12px 0;width:100%;border-left:5px solid var(--gold);font-size:1.3rem}
+    .stay-block{background:rgba(255,255,255,0.08);padding:20px;border-radius:20px;margin:16px 0;border-left:5px solid var(--gold)}
+    select,input{width:100%;padding:16px;margin:8px 0;background:#111;color:#fff;border:3px solid var(--green);border-radius:12px;font-size:1.2rem}
+    .calendar-input{padding:20px;font-size:1.6rem}
+    h2{font-size:2rem;text-align:center;color:var(--gold);margin:20px 0}
+    p{text-align:center;font-size:1.3rem;opacity:0.9;line-height:1.5}
   </style>
 </head>
 <body>
 
-<!-- YOUR 5 IMMORTAL IMAGES — LOCKED FOREVER -->
-<div class="bg-slideshow">
-  <!-- YOUR MOONRISE OVER JEWEL GRANDE — FIRST AND ETERNAL -->
-  <div class="bg-slide active" style="background-image:url('https://i.ibb.co/9v7k7vP/your-moon-image.jpg')"></div>
-  <div class="bg-slide" style="background-image:url('https://i.ibb.co/0jG3n8K/yaad1.jpg')"></div>
-  <div class="bg-slide" style="background-image:url('https://i.ibb.co/4p7n7nQ/yaad2.jpg')"></div>
-  <div class="bg-slide" style="background-image:url('https://i.ibb.co/7pK7p7K/yaad3.jpg')"></div>
-  <div class="bg-slide" style="background-image:url('https://i.ibb.co/8xY8xY8/yaad4.jpg')"></div>
-</div>
-
 <div class="container">
   <div id="step0" class="step active">
     <h1>YAADLIFE</h1>
-    <p style="text-align:center;font-size:2.2rem;margin:50px 0;opacity:0.95;line-height:1.4">
-      One Love. One Calendar.<br>Full Jamaica.
-    </p>
+    <div class="tagline">One Love. One Calendar.<br>Full Jamaica.</div>
     <button id="start-button">Start Building My Yaad</button>
   </div>
 
   <div id="step1" class="step">
     <h2>Are you in Jamaica right now?</h2>
-    <div class="option-card selected" onclick="next('step2')">
-      <div class="option-img" style="background-image:url('https://images.unsplash.com/photo-1570559449616-0e7d30c69b69?w=800')"></div>
-      <div class="option-text">Yes, I'm local / already here</div>
-    </div>
-    <div class="option-card" onclick="next('step2')">
-      <div class="option-img" style="background-image:url('https://images.unsplash.com/photo-1519677100203-0d5a4e4e9d9b?w=800')"></div>
-      <div class="option-text">Flying in from abroad</div>
-    </div>
+    <button onclick="next('step2')">Yes, I'm local / already here</button>
+    <button onclick="next('step2')">Flying in from abroad</button>
   </div>
 
   <div id="step2" class="step">
     <h2>Select Your Travel Dates</h2>
-    <input type="text" id="dateRange" class="calendar-input" placeholder="Tap to choose Arrival to Departure">
-    <button id="confirm-dates">Confirm Dates & Begin</button>
+    <input type="text" id="dateRange" class="calendar-input" placeholder="Tap to choose dates">
+    <button id="confirm-dates">Confirm Dates</button>
   </div>
 
   <div id="step3" class="step">
     <h2>Where Will You Stay?</h2>
-    <p style="text-align:center">Add stays across any parish</p>
+    <p>Add stays across any parish</p>
     <div id="stays-container"></div>
     <button id="add-stay">+ Add Another Stay</button>
-    <button id="done-stays">Review Trip & Pay</button>
+    <button id="done-stays">Review & Pay</button>
   </div>
 
   <div id="summary" class="step">
-    <h1>Your YaadLife Journey</h1>
-    <div id="final-summary" style="margin:40px 0"></div>
-    <div class="total">$<span id="total">0</span> USD</div>
+    <h1>Your YaadLife Trip</h1>
+    <div id="final-summary"></div>
+    <div class="total">$<span id="total">0</span></div>
     <button id="wallet-connect" class="wallet">CONNECT WALLET & PAY</button>
-    <p style="text-align:center;margin:50px 0;font-size:1.5rem;opacity:0.9;line-height:1.6">
-      Your lifetime YaadLife Soulbound Pass will be minted instantly<br>
-      <strong>You are now family forever</strong>
-    </p>
+    <p>Your lifetime YaadLife Soulbound Pass<br>will be minted instantly.<br><strong>Welcome home forever</strong></p>
   </div>
 </div>
 
 <script>
-// Background slideshow — 15 second cycle
-const slides = document.querySelectorAll('.bg-slide');
-let current = 0;
-setInterval(() => {
-  slides[current].classList.remove('active');
-  current = (current + 1) % slides.length;
-  slides[current].classList.add('active');
-}, 15000);
-
-const parishes = ["Kingston","St. Andrew","St. Catherine","Portland","St. Thomas","St. Mary","St. Ann","Trelawny","St. James","Hanover","Westmoreland","St. Elizabeth","Manchester","Clarendon"];
-const hotelsByParish = {
-  "Kingston": ["Jamaica Pegasus","Courtleigh","AC Hotel"],
-  "Portland": ["Trident Hotel","Geejam","Kanopi House"],
-  "St. Andrew": ["Terra Nova","Strawberry Hill"],
-  "St. James": ["Round Hill","Half Moon","Jewel Grande"]
-};
+const parishes = ["Kingston","St. Andrew","Portland","St. Ann","St. James","Negril","Montego Bay","Ocho Rios","Mandeville","Savanna-la-Mar","Port Antonio","Black River","Falmouth","Clarendon"];
+const hotels = ["Jamaica Pegasus","Round Hill","GoldenEye","Sandals","Jewel Grande","Half Moon","The Caves","Strawberry Hill","Trident","Geejam"];
 
 let state = { stays: [], total: 0 };
 
@@ -126,37 +85,26 @@ document.addEventListener('DOMContentLoaded', () => {
   };
 
   document.getElementById('start-button').onclick = () => next('step1');
-
   document.getElementById('confirm-dates').onclick = () => {
-    if (!document.getElementById('dateRange').value.includes('to')) {
-      alert("Please select both arrival and departure dates");
-      return;
-    }
+    if (!document.getElementById('dateRange').value.includes('to')) return alert("Please select both dates");
     next('step3');
-    if (document.querySelectorAll('.stay-block').length === 0) {
-      addStayBlock();
-    }
+    if (!document.querySelector('.stay-block')) addStayBlock();
   };
 
   function addStayBlock() {
     const block = document.createElement('div');
     block.className = 'stay-block';
     block.innerHTML = `
-      <select class="parish-select" style="width:100%;padding:18px;margin:10px 0;background:#111;color:#fff;border:3px solid var(--green);border-radius:16px;font-size:1.3rem">
+      <select class="parish">
         ${parishes.map(p => `<option>${p}</option>`).join('')}
       </select>
-      <select class="hotel-select" style="width:100%;padding:18px;margin:10px 0;background:#111;color:#fff;border:3px solid var(--green);border-radius:16px;font-size:1.3rem"></select>
-      <input type="number" class="nights" value="3" min="1" placeholder="Nights" style="width:100%;padding:18px;margin:10px 0;background:#111;color:#fff;border:3px solid var(--green);border-radius:16px;font-size:1.3rem">
-      <button class="small" onclick="this.parentElement.remove(); updateTotal()">Remove Stay</button>
+      <select class="hotel">
+        ${hotels.map(h => `<option>${h}</option>`).join('')}
+      </select>
+      <input type="number" class="nights" value="3" min="1" placeholder="Nights">
+      <button class="small" onclick="this.parentElement.remove(); updateTotal()">Remove</button>
     `;
     document.getElementById('stays-container').appendChild(block);
-    const parish = block.querySelector('.parish-select');
-    const hotel = block.querySelector('.hotel-select');
-    parish.onchange = () => {
-      const hotels = hotelsByParish[parish.value] || ["Luxury Villa", "Beach Resort", "Private Home"];
-      hotel.innerHTML = hotels.map(h => `<option>${h}</option>`).join('');
-    };
-    parish.onchange();
     block.querySelector('.nights').oninput = updateTotal;
     updateTotal();
   }
@@ -173,32 +121,25 @@ document.addEventListener('DOMContentLoaded', () => {
   };
 
   document.getElementById('done-stays').onclick = () => {
-    if (document.querySelectorAll('.stay-block').length === 0) {
-      alert("Please add at least one stay");
-      return;
-    }
+    if (!document.querySelector('.stay-block')) return alert("Add at least one stay");
     state.stays = Array.from(document.querySelectorAll('.stay-block')).map(b => ({
-      parish: b.querySelector('.parish-select').value,
-      hotel: b.querySelector('.hotel-select').value,
+      parish: b.querySelector('.parish').value,
+      hotel: b.querySelector('.hotel').value,
       nights: parseInt(b.querySelector('.nights').value) || 1
     }));
     let html = '';
     state.stays.forEach(s => {
       const cost = s.nights * 280;
-      html += `<div class="breakdown"><strong>${s.hotel}</strong> • ${s.parish} • ${s.nights} night${s.nights>1?'s':''} → $${cost.toLocaleString()}</div>`;
+      html += `<div class="breakdown"><strong>${s.hotel}</strong><br>${s.parish} • ${s.nights} night${s.nights>1?'s':''} → $${cost.toLocaleString()}</div>`;
     });
     document.getElementById('final-summary').innerHTML = html;
     updateTotal();
     next('summary');
   };
 
-  // REAL WALLET CONNECT v2
-  document.getElementById('wallet-connect').onclick = async () => {
-    if (state.total === 0) {
-      alert("Add stays first");
-      return;
-    }
-    alert(`Payment of $${state.total.toLocaleString()} Confirmed\nYour YaadLife Soulbound Pass has been minted.\n\nWelcome home forever.\n\nIRIE`);
+  document.getElementById('wallet-connect').onclick = () => {
+    if (state.total === 0) return alert("Add stays first");
+    alert(`Payment of $${state.total.toLocaleString()} Confirmed\n\nYour YaadLife Soulbound Pass has been minted.\n\nWelcome to the family forever.\n\nIRIE`);
   };
 });
 </script>
