--- a/index.html
+++ b/index.html
@@ -1,147 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YAADLIFE • One Love Forever</title>
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+  <title>YAAD LIFE – One Love. One Calendar. Full Jamaica.</title>
+  <meta name="description" content="Book your full Jamaica trip in one flow. Villas, transport, food, vibes — all in one Yaad." />
+  
+  <!-- TON Connect + Telegram WebApp -->
+  <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
+  
   <style>
-    :root{--black:#000;--green:#009B48;--gold:#FFD700;--darkgreen:#006633}
-    *{margin:0;padding:0;box-sizing:border-box}
-    html,body{height:100%;margin:0;background:#000;font-family:-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;color:#fff;overflow-x:hidden}
-    body{display:flex;flex-direction:column;min-height:100vh}
-    .container{max-width:420px;margin:0 auto;padding:20px;flex:1;display:flex;flex-direction:column;justify-content:flex-start}
-    h1{font-size:4.8rem;color:var(--gold);text-align:center;font-weight:900;text-shadow:0 0 40px var(--green);letter-spacing:4px;margin:30px 0 10px;line-height:1}
-    .tagline{text-align:center;font-size:1.8rem;margin:20px 0 40px;opacity:0.9;line-height:1.4}
-    .step{display:none;flex-direction:column;align-items:center;padding:30px;background:rgba(0,0,0,0.9);backdrop-filter:blur(20px);border-radius:32px;border:4px solid var(--green);margin:20px 0;box-shadow:0 20px 60px rgba(0,0,0,0.8)}
-    .step.active{display:flex;animation:fadeIn 0.8s}
-    @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:none}}
-    button{background:var(--green);color:#fff;border:none;padding:20px 40px;margin:20px auto;display:block;width:100%;border-radius:60px;font-size:1.6rem;font-weight:800;cursor:pointer;transition:0.4s;box-shadow:0 15px 40px rgba(0,155,72,0.8)}
-    button:hover{background:var(--darkgreen);transform:scale(1.05)}
-    button.wallet{background:#6B4EFF;border:6px solid var(--gold);font-size:1.8rem;padding:24px;animation:pulse 2s infinite}
-    @keyframes pulse{0%,100%{box-shadow:0 0 0 0 rgba(255,215,0,0.7)}70%{box-shadow:0 0 0 16px rgba(255,215,0,0)}}
-    button.small{background:var(--gold);color:#000;padding:12px 24px;font-size:1.1rem;border-radius:30px;margin-top:8px}
-    #start-button{font-size:2.4rem;padding:50px;background:linear-gradient(135deg,var(--green),var(--darkgreen));border:10px solid var(--gold)}
-    .total{font-size:4.5rem;font-weight:900;text-align:center;margin:40px 0;color:var(--gold);text-shadow:0 0 60px #000}
-    .breakdown{background:rgba(255,255,255,0.1);padding:18px;border-radius:16px;margin:12px 0;width:100%;border-left:5px solid var(--gold);font-size:1.3rem}
-    .stay-block{background:rgba(255,255,255,0.08);padding:20px;border-radius:20px;margin:16px 0;border-left:5px solid var(--gold)}
-    select,input{width:100%;padding:16px;margin:8px 0;background:#111;color:#fff;border:3px solid var(--green);border-radius:12px;font-size:1.2rem}
-    .calendar-input{padding:20px;font-size:1.6rem}
-    h2{font-size:2rem;text-align:center;color:var(--gold);margin:20px 0}
-    p{text-align:center;font-size:1.3rem;opacity:0.9;line-height:1.5}
+    :root {
+      --gold: #FFD700;
+      --dark: #0F1620;
+      --green: #00C853;
+      --bg: #000;
+      --text: #FFF;
+    }
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body {
+      background: var(--bg);
+      color: var(--text);
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      min-height: 100dvh;
+      display: flex;
+      flex-direction: column;
+      padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+    }
+    .container { flex: 1; padding: 2rem 1rem; text-align: center; }
+    h1 {
+      font-size: 4.5rem;
+      font-weight: 900;
+      background: linear-gradient(0deg, var(--gold), #FFEDAB);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: 1rem;
+      letter-spacing: -2px;
+    }
+    p {
+      font-size: 1.4rem;
+      opacity: 0.9;
+      margin-bottom: 3rem;
+    }
+    .btn {
+      width: 90%;
+      max-width: 420px;
+      margin: 1rem auto;
+      padding: 1.4rem;
+      border-radius: 16px;
+      font-size: 1.5rem;
+      font-weight: 800;
+      border: none;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+    }
+    .btn-gold {
+      background: var(--gold);
+      color: var(--dark);
+    }
+    .btn-dark {
+      background: var(--dark);
+      color: var(--gold);
+    }
+    .btn-green {
+      background: var(--green);
+      color: white;
+    }
+    .btn:active { transform: scale(0.97); }
+    .hidden { display: none !important; }
+    #journey { margin: 2rem 0; font-size: 1.3rem; }
+    .stay { background: rgba(255,255,255,0.1); padding: 1rem; margin: 0.8rem; border-radius: 12px; }
   </style>
 </head>
 <body>
+  <div class="container">
+    <h1>YAAD<br>LIFE</h1>
+    <p>One Love. One Calendar. Full Jamaica.</p>
 
-<div class="container">
-  <div id="step0" class="step active">
-    <h1>YAADLIFE</h1>
-    <div class="tagline">One Love. One Calendar.<br>Full Jamaica.</div>
-    <button id="start-button">Start Building My Yaad</button>
+    <div id="journey"></div>
+
+    <button id="primaryBtn" class="btn btn-gold">BOOK YAAD</button>
+    <button id="mintBtn" class="btn btn-dark">Konnet Yaad + MINT</button>
+    <button id="addBtn" class="btn btn-green hidden">Add Another Stay</button>
   </div>
 
-  <div id="step1" class="step">
-    <h2>Are you in Jamaica right now?</h2>
-    <button onclick="next('step2')">Yes, I'm local / already here</button>
-    <button onclick="next('step2')">Flying in from abroad</button>
-  </div>
+  <script>
+    const stays = [];
+    const stages = ["stay", "transport", "activities", "food", "review"];
+    let currentStage = 0;
 
-  <div id="step2" class="step">
-    <h2>Select Your Travel Dates</h2>
-    <input type="text" id="dateRange" class="calendar-input" placeholder="Tap to choose dates">
-    <button id="confirm-dates">Confirm Dates</button>
-  </div>
+    const primaryBtn = document.getElementById("primaryBtn");
+    const mintBtn = document.getElementById("mintBtn");
+    const addBtn = document.getElementById("addBtn");
+    const journeyDiv = document.getElementById("journey");
 
-  <div id="step3" class="step">
-    <h2>Where Will You Stay?</h2>
-    <p>Add stays across any parish</p>
-    <div id="stays-container"></div>
-    <button id="add-stay">+ Add Another Stay</button>
-    <button id="done-stays">Review & Pay</button>
-  </div>
+    const stageLabels = {
+      stay: "Next: Transport",
+      transport: "Next: Activities",
+      activities: "Next: Food & Vibes",
+      food: "Next: Review Trip",
+      review: "BOOK YAAD & PAY"
+    };
 
-  <div id="summary" class="step">
-    <h1>Your YaadLife Trip</h1>
-    <div id="final-summary"></div>
-    <div class="total">$<span id="total">0</span></div>
-    <button id="wallet-connect" class="wallet">CONNECT WALLET & PAY</button>
-    <p>Your lifetime YaadLife Soulbound Pass<br>will be minted instantly.<br><strong>Welcome home forever</strong></p>
-  </div>
-</div>
+    function updateUI() {
+      journeyDiv.innerHTML = stays.map(s => `<div class="stay">${s}</div>`).join("");
+      
+      if (stays.length === 0) {
+        primaryBtn.textContent = "BOOK YAAD";
+        addBtn.classList.add("hidden");
+      } else {
+        primaryBtn.textContent = stageLabels[stages[currentStage]] || "BOOK YAAD & PAY";
+        addBtn.classList.remove("hidden");
+        addBtn.textContent = `Add Another ${stages[currentStage].charAt(0).toUpperCase() + stages[currentStage].slice(1)}`;
+      }
 
-<script>
-const parishes = ["Kingston","St. Andrew","Portland","St. Ann","St. James","Negril","Montego Bay","Ocho Rios","Mandeville","Savanna-la-Mar","Port Antonio","Black River","Falmouth","Clarendon"];
-const hotels = ["Jamaica Pegasus","Round Hill","GoldenEye","Sandals","Jewel Grande","Half Moon","The Caves","Strawberry Hill","Trident","Geejam"];
+      if (currentStage >= stages.length - 1) {
+        primaryBtn.textContent = "BOOK YAAD & PAY";
+      }
+    }
 
-let state = { stays: [], total: 0 };
+    primaryBtn.onclick = () => {
+      if (stays.length === 0) {
+        stays.push("Jamaica Pegasus • Kingston • 3 nights");
+      } else if (currentStage < stages.length - 1) {
+        currentStage++;
+        const mock = {
+          transport: "Private Transfer • Round-trip",
+          activities: "Dunn’s River + YS Falls",
+          food: "Scotchie’s Jerk + Rick’s Café Sunset"
+        };
+        stays.push(mock[stages[currentStage]] || `Added ${stages[currentStage]}`);
+      } else {
+        primaryBtn.textContent = "Trip Booked! Share Yaad";
+        primaryBtn.disabled = true;
+        mintBtn.textContent = "Konnet Yaad + MINT (Lifetime SBT)";
+      }
+      updateUI();
+    };
 
-document.addEventListener('DOMContentLoaded', () => {
-  flatpickr("#dateRange", { mode: "range", dateFormat: "M j, Y", minDate: "today" });
+    addBtn.onclick = () => {
+      stays.push(`Extra ${stages[currentStage]} added`);
+      updateUI();
+    };
 
-  window.next = (id) => {
-    document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
-    document.getElementById(id).classList.add('active');
-  };
-
-  document.getElementById('start-button').onclick = () => next('step1');
-  document.getElementById('confirm-dates').onclick = () => {
-    if (!document.getElementById('dateRange').value.includes('to')) return alert("Please select both dates");
-    next('step3');
-    if (!document.querySelector('.stay-block')) addStayBlock();
-  };
-
-  function addStayBlock() {
-    const block = document.createElement('div');
-    block.className = 'stay-block';
-    block.innerHTML = `
-      <select class="parish">
-        ${parishes.map(p => `<option>${p}</option>`).join('')}
-      </select>
-      <select class="hotel">
-        ${hotels.map(h => `<option>${h}</option>`).join('')}
-      </select>
-      <input type="number" class="nights" value="3" min="1" placeholder="Nights">
-      <button class="small" onclick="this.parentElement.remove(); updateTotal()">Remove</button>
-    `;
-    document.getElementById('stays-container').appendChild(block);
-    block.querySelector('.nights').oninput = updateTotal;
-    updateTotal();
-  }
-
-  document.getElementById('add-stay').onclick = addStayBlock;
-
-  window.updateTotal = () => {
-    state.total = 0;
-    document.querySelectorAll('.stay-block').forEach(b => {
-      const nights = parseInt(b.querySelector('.nights').value) || 0;
-      state.total += nights * 280;
+    // Konnet Yaad + MINT (TON Connect)
+    const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
+      manifestUrl: "https://yaadlife.github.io/ton-manifest.json",
+      buttonRootId: null
     });
-    document.getElementById('total').textContent = state.total.toLocaleString();
-  };
 
-  document.getElementById('done-stays').onclick = () => {
-    if (!document.querySelector('.stay-block')) return alert("Add at least one stay");
-    state.stays = Array.from(document.querySelectorAll('.stay-block')).map(b => ({
-      parish: b.querySelector('.parish').value,
-      hotel: b.querySelector('.hotel').value,
-      nights: parseInt(b.querySelector('.nights').value) || 1
-    }));
-    let html = '';
-    state.stays.forEach(s => {
-      const cost = s.nights * 280;
-      html += `<div class="breakdown"><strong>${s.hotel}</strong><br>${s.parish} • ${s.nights} night${s.nights>1?'s':''} → $${cost.toLocaleString()}</div>`;
-    });
-    document.getElementById('final-summary').innerHTML = html;
-    updateTotal();
-    next('summary');
-  };
+    mintBtn.onclick = async () => {
+      if (!tonConnectUI.connected) {
+        await tonConnectUI.openModal();
+      } else {
+        alert("Yaad SBT Minted! Welcome to the family lifetime.");
+        mintBtn.textContent = "Minted – Yaad Forever";
+        mintBtn.disabled = true;
+      }
+    };
 
-  document.getElementById('wallet-connect').onclick = () => {
-    if (state.total === 0) return alert("Add stays first");
-    alert(`Payment of $${state.total.toLocaleString()} Confirmed\n\nYour YaadLife Soulbound Pass has been minted.\n\nWelcome to the family forever.\n\nIRIE`);
-  };
-});
-</script>
+    updateUI();
+  </script>
 </body>
 </html>
